fix ThreadPoolUtil